--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </div>
             <div class="nav-actions">
                 <a class="ghost-link" href="blog.html">blog</a>
+                <a class="ghost-link" href="assets/resume.pdf" target="_blank" rel="noopener noreferrer">resume</a>
                 <a class="ghost-link" href="https://github.com/shreayp" target="_blank"
                     rel="noopener noreferrer">github</a>
             </div>
